--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -111,7 +111,9 @@
                     <div class="row app-align-center">
 
                         <div class="col-sm-5 hidden-sm-down">
-                            <a href="https://app.mymensor.com/landing/?type=1&key=cap/cap_jorge_0_p_1494930414341.jpg&signature=9014859D377208D84D6EE61DE007345B3F241575D31AB3F1515695930261CA3D">
+                            <a href="https://app.mymensor.com/landing/?type=1&key=cap/cap_jorge_0_p_1494930414341.jpg&signature=9014859D377208D84D6EE61DE007345B3F241575D31AB3F1515695930261CA3D"
+                               data-toggle="tooltip" data-placement="top"
+                               title="{% trans 'Click to see an example of what you can distribute to everybody!' %}">
                                 <img class="app-iphone" src="{% static 'images/compostelamediacheck2.jpeg' %}" alt=""
                                      style="width: 120%;">
                             </a>
