--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -327,7 +327,8 @@
                                 <li class="py-4"><strong>{% trans "Mobile App" %}</strong>{% trans " custom setups" %}
                                 </li>
                             </ul>
-                            <a class="btn btn-primary btn-lg btn-block" href="mailto:contact@mymensor.com?subject=MyMensorCorp Quote Request&body=Please contact me in order to start discussing a custom MyMensorCorp for my Organization. Thanks!"
+                            <a class="btn btn-primary btn-lg btn-block"
+                               href={% trans "mailto:contact@mymensor.com?subject=MyMensorCorp Quote Request&body=Please contact me in order to start discussing a custom MyMensorCorp for my Organization. Thanks!" %}
                                role="button">{% trans "Make Your Request" %}</a>
                         </div>
                     </div>
