--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -328,7 +328,7 @@
                                 </li>
                             </ul>
                             <a class="btn btn-primary btn-lg btn-block"
-                               href={% trans "mailto:contact@mymensor.com?subject=MyMensorCorp Quote Request&body=Please contact me in order to start discussing a custom MyMensorCorp for my Organization. Thanks!" %}
+                               href="{% trans "mailto:contact@mymensor.com?subject=MyMensorCorp Quote Request&body=Please contact me in order to start discussing a custom MyMensorCorp for my Organization. Thanks!" %}"
                                role="button">{% trans "Make Your Request" %}</a>
                         </div>
                     </div>
