--- a/mymwebsite/templates/docs.html
+++ b/mymwebsite/templates/docs.html
@@ -33,7 +33,7 @@
         {% trans "Images are processed either by you or someone in your organization and the data is automatically fed into your dashboard." %}
     </p>
     <h4 class="text-info">{% trans "Into Details" %}</h4>
-    <h5 class="text-info">{% trans "Verification Points - VPs" %}</h5>
+    <h5 class="text-info">{% trans "1. Verification Points - VPs" %}</h5>
     <p class="text-justify">
         {% trans "A VP (Verification Point) is each of the visual targets for the capture of images (pictures). Each VP may have one or several TAGs." %}
         {% trans "A VP may be a photo of pretty much anything. You will have to assess what can be a standard VP or if it is needed to use one our possible alternative options to capture the required image." %}
@@ -59,143 +59,14 @@
         {% trans "So, using this super VP you will be able to capture images that change a lot, that change color, or have large parts included or excluded." %}
         {% trans "The smartphone will always capture the image in the same relative position initially configured for each specific super VP." %}
     </p>
-    <p class="text-justify">(e) Monitoring of Site Content and use of Service: MyMensor reserves the right, but does not
-        undertake the obligation, to monitor use of the Site and/or the Service, and to investigate and take appropriate
-        legal action against any party that uses the Site in violation of these Terms of Service or applicable law.
-        MyMensor reserves the right to accept, reject or modify any Site Content or User Content, but assumes no
-        liability based on its acceptance, rejection, modification or failure to modify any Site Content or User
-        Content.</p>
-    <p class="text-justify">(f) Copyright Infringement: As a condition of your right to use the Site and the Service,
-        you agree to respect the intellectual property rights of others. Accordingly, you agree not to upload or post to
-        the Site or the Service any copyrighted materials, trademarks or other proprietary information belonging to any
-        third party without the prior written consent of the applicable third party. You acknowledge that MyMensor will
-        terminate your access to the Site and/or the Service if you repeatedly infringe the copyright of third parties.
-        If you believe that your copyrighted work has been illegally uploaded or posted on the Site or the Service, you
-        may send a written notice to MyMensor at support@mymensor.com, and MyMensor will respond in reasonable time.
-        MyMensor reserves all rights to seek damages and fees associated with infringement and or fraud.</p>
-    <h4 class="text-info">Your Use of the Site and Service</h4>
-    <p class="text-justify">(a) Account and Use of Service: You may use your User Account for the Service only in
-        accordance with these Terms of Service and only for lawful purposes. You are responsible for your own
-        communications, including the upload, transmission and posting of information, and are responsible for the
-        consequences of their posting on or through the Service.</p>
-    <p class="text-justify">(b) Fees: Some features of the Service may only be accessed and used upon the payment of
-        applicable fees (“Fees”). Fees may vary depending on usage in accordance with our current pricing policy. If you
-        do not initially register for a version of the Service that requires the payment of a fee, you will nonetheless
-        be permitted to use all of the features of the Service for a period of thirthy (30) days (“Free Trial Period”).
-        Upon the expiration of the Free Trial Period, you will only be able to access and use those features of the
-        Service the use of which does not require the payment of a Fee, unless you subsequently upgrade to a paid
-        version of the Service. All Fees are exclusive of all taxes, levies, or duties imposed by taxing authorities,
-        and you shall be responsible for payment of all such taxes, levies, or duties, excluding only Portugal
-        taxes.</p>
-    <p class="text-justify">(c) Refunds, Upgrading and Downgrading: Refunds are processed according to our fair refund
-        policy. Any upgrade or downgrade in your Service use will result in the new Fees being charged at the next
-        billing cycle. There will be no prorating for downgrades in between billing cycles. Downgrading your Service may
-        cause the loss of features or capacity of your User Account. MyMensor does not accept any liability for such
-        loss.</p>
-    <p class="text-justify">(d) Cancellation and Termination: You are solely responsible for properly canceling your
-        User Account. An email or phone request to cancel your User Account is not considered cancellation. You can
-        cancel your User Account at any time in our Site. If you cancel your User Account before the end of your current
-        paid up month, your cancellation will take effect immediately, and you will not be charged again. But there will
-        not be any prorating of unused time in the last billing cycle.</p>
-    <p class="text-justify">(e) Prohibited Conduct: MyMensor specifically prohibits any use of the Site or the Service
-        for: (i) posting any (1) information which is incomplete, false, inaccurate or not your own, (2) trade secrets
-        or material that is copyrighted or otherwise owned by a third party unless you have a valid license from the
-        owner which permits you to post it, (3) material that infringes on any other intellectual property, privacy or
-        publicity right of another, (4) advertisement, promotional materials or solicitation related to any product or
-        service that is competitive with MyMensor products or services or (5) software or programs which contain any
-        harmful code, including, but not limited to, viruses, worms, time bombs or Trojan horses; (ii) impersonating
-        another person; (iii) engaging in or encouraging conduct that would constitute a criminal offense, give rise to
-        civil liability or otherwise violate any city, state, national or international law or regulation, or which
-        fails to comply with accepted Internet protocol; or (iv) transmitting or transferring (by any means) information
-        or software derived from the Site or the Service to foreign countries or certain foreign nations in violation of
-        export control laws. In addition, you are prohibited from violating or attempting to violate the security of the
-        Site, the Service or MyMensor’s system or network security, including, without limitation, the following: (w)
-        accessing data not intended for users of the Site or the Service, or gaining unauthorized access to an account,
-        server or any other computer system; (x) attempting to probe, scan or test the vulnerability of a system or
-        network or to breach security or authentication measures; (y) attempting to interfere with the function of the
-        Site, the Service, host or network, including, without limitation, via means of submitting a virus to the Site,
-        overloading, “flooding”, “mailbombing”, “crashing”, or sending unsolicited e-mail, including promotions and/or
-        advertising of products or services; or (z) forging any TCP/IP packet header or any part of the header
-        information in any e-mail or newsgroup posting. Violations of the Site’s or MyMensor’s system or network
-        security may result in civil or criminal liability.
-    <p class="text-justify">(f) User Content: If you elect to display, post, submit or otherwise make available to
-        others, on the Site any content or works of authorship, including, without limitation, images, audio files,
-        text, software (but excluding User software) or other materials, (collectively, “User Content”), you hereby
-        grant to MyMensor a perpetual, irrevocable, royalty-free, worldwide, non-exclusive right and license, including
-        the right to grant sublicenses to third parties, to use, reproduce, publicly display, publicly perform, prepare
-        derivative works from and distribute such User Content, for any purpose. In addition, you hereby irrevocably
-        represent and warrant to MyMensor that (i) you have all necessary power, authority, right, title and/or licenses
-        to grant to MyMensor the foregoing right and license and (ii) the posting, submission, display by you of User
-        Content on the Site, and the exercise by MyMensor of the foregoing license does not and will not (1) violate any
-        applicable law or government regulation or (2) infringe any right of publicity or invades the privacy of others,
-        or any intellectual property right of any third party, (iii) no User Content you provide (1) will constitute
-        obscene, pornographic, indecent, profane or otherwise objectionable material, (2) is discriminatory, hateful or
-        bigoted toward, or abusive of, any group or individual, or (3) is libelous or defamatory. For the avoidance of
-        doubt, any information or data from your accounts with third party services (i.e., Facebook, Twitter, Gmail
-        etc.) that is processed by MyMensor and which you do not make publically available on MyMensor, is not User
-        Content, and MyMensor does not receive any rights in such information or data.</p>
-    <p class="text-justify">(g) Suggestions: You hereby grant to MyMensor a royalty-free, worldwide, transferable,
-        sublicenseable, irrevocable, perpetual license to use or incorporate into the Site and/or the Service any
-        suggestions, enhancement requests, recommendations or other feedback provided by you to MyMensor that is related
-        to the Site and/or the Service.</p>
-    <p class="text-justify">(h) Indemnification: You hereby irrevocably agree to indemnify, defend and hold MyMensor,
-        its affiliates, directors, officers, employees and agents harmless from and against any and all loss, costs,
-        damages, liabilities and expenses (including attorneys’ fees) arising out of or related to (i) any third party
-        claim resulting from a breach by you of any of your covenants, representations or warranties contained in these
-        Terms of Use and/or (ii) your use of the Site and/or the Service.</p>
-    <h4 class="text-info">Linked Websites</h4>
-    <p class="text-justify">The Site may contain links to other websites that are not owned or operated by MyMensor, and
-        you agree that MyMensor provides links to such websites solely as a convenience and has no responsibility for
-        the content or availability of such websites, and that MyMensor does not endorse such websites or any products
-        or services associated therewith. Your use of such websites will be subject to the terms of use applicable to
-        each such website.</p>
-    <h4 class="text-info text-uppercase">LIMITATION OF LIABILITY</h4>
-    <p class="text-justify">(a) Warranty Disclaimer: THE SITE AND, SITE CONTENT AND THE SERVICE ARE PROVIDED STRICTLY ON
-        AN “AS IS” AND “AS AVAILABLE” BASIS, AND MYMENSOR MAKES NO WARRANTY THAT THE SITE, SERVICE OR SITE CONTENT ARE
-        COMPLETE, SUITABLE FOR YOUR PURPOSE, OR ACCURATE. ON BEHALF OF ITSELF AND ITS LICENSORS, MYMENSOR HEREBY
-        EXPRESSLY DISCLAIMS ANY AND ALL IMPLIED, STATUTORY OR OTHER WARRANTIES WITH RESPECT TO THE SITE, SITE CONTENT
-        AND SERVICE, OR THE AVAILABILITY OF THE FOREGOING, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
-        MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFIRNGEMENT. THE ENTIRE RISK AS TO RESULTS OBTAINED
-        THROUGH USE OF THE SITE, SERVICE AND/OR THE SITE CONTENT RESTS WITH YOU AND MYMENSOR MAKES NO REPRESENTATION OR
-        WARRANTY THAT THE AVAILABILITY OF THE SITE AND OR THE SERVICE WILL BE UNINTERRUPTED, OR THAT THE SITE, SERVICE
-        AND/OR THE SITE CONTENT WILL BE ERROR FREE OR THAT ALL ERRORS WILL BE CORRECTED.</p>
-    <p class="text-justify">(b) Limitation of Liability: TO THE FULLEST EXTENT PERMITTED BY APPLICABLE LAW, YOU AGREE
-        THAT MYMENSOR SHALL NOT BE LIABILE TO YOU FOR ANY DAMAGES ARISING OUT OF OR CONNECTED TO YOUR USE OF, OR
-        INABILITY TO USE, THE SITE, THE SERVICE OR THE SITE CONTENT, INCLUDING, WITHOUT LIMITATION, ANY AND ALL DIRECT,
-        INDIRECT, INCIDENTAL, CONSEQUENTIAL, PUNITIVE, SPECIAL, EXEMPLARY OR STATUTORY DAMAGES (INCLUDING, WITHOUT
-        LIMITATION, LOSS OF BUSINESS, LOSS OR PROFITS, LOSS OF REVENUE, LOSS OF DATA, LOSS OF GOODWILL OR FOR ANY COST
-        OF COVER OR COST OF PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES), EVEN IF MYMENSOR HAS BEEN ADVISED OF THE
-        POSSIBILITY OF SUCH DAMAGES, AND REGARDLESS OF THE LEGAL THEORY UNDER WHICH DAMAGES ARE SOUGHT, WHETHER IN
-        BREACH OF CONTRACT OR IN TORT, INCLUDING NEGLIGENCE. You acknowledge that you have read, understand and agree to
-        MyMensor’s Privacy Policy located at https://mymensor.com/privacy, which is hereby incorporated into and made a
-        part of these Terms of Service by this reference.</p>
-    <h4 class="text-info">Location of the Site and your Use</h4>
-    <p class="text-justify">MyMensor operates or controls the operation of this Site and the Service from offices in
-        Portugal. In addition, the Site and the Service may be mirrored, and other websites operated or controlled by
-        MyMensor may be located, at various locations in and outside of the European Union. MyMensor makes no
-        representation or warranty that all of the features of this Site or Service will be available to you outside of
-        the European Union, or that they are permitted to be accessed outside of the European Union. You acknowledge
-        that you are solely responsible for any decision by you to use of this Site and/or the Service from other
-        locations, and that such use may be subject to, and that you are responsible for, compliance with applicable
-        local laws.</p>
-    <h4 class="text-info">General</h4>
-    <p class="text-justify">These Terms of Service constitute the entire agreement and understanding between the parties
-        concerning the subject matter hereof, notwithstanding any different or additional terms that may be contained in
-        the form of purchase order or other document used by you to place orders or otherwise effect transactions
-        hereunder, which such terms are hereby rejected. These Terms of Service supersede all prior or contemporaneous
-        discussions, proposals and agreements between you and MyMensor relating to the subject matter hereof. No
-        amendment, modification or waiver of any provision of these Terms of Service will be effective unless in writing
-        and signed by an officer of MyMensor. If any provision of these Terms of Service is held to be invalid or
-        unenforceable, the remaining portions will remain in full force and effect and such provision will be enforced
-        to the maximum extent possible so as to effect the intent of the parties and will be reformed to the extent
-        necessary to make such provision valid and enforceable. No waiver of rights by MyMensor may be implied from any
-        actions or failures to enforce rights under these Terms of Service. These Terms of Service are intended to be
-        and are solely for the benefit of MyMensor and you and do not create any right in favor of any third party.
-        These Terms of Service will be governed by and construed in accordance with the laws of Portugal, without
-        reference to its conflict of laws principles. All disputes arising out of or relating to these Terms of Service
-        will be submitted to the exclusive jurisdiction of the courts of competent jurisdiction located in Portugal, and
-        each party irrevocably consents to such personal jurisdiction and waives all objections to this venue.</p>
-    <h4 class="text-info">Privacy</h4>
-    <p class="text-justify">Please visit <a href="{% url 'privacy' %}">https://mymensor.com/privacy</a> to understand
-        how MyMensor collects and uses personal information.</p>
+    <p></p>
+    <p></p>
+    <h5 class="text-info">{% trans "2. TAGs" %}</h5>
+    <p class="text-justify">
+        {% trans "A TAG is the real data contained within a VP." %}
+        {% trans "The TAG will always be a numerical value, so you have to  includ this concept when preparing your TAG questions." %}
+        {% trans "For instance, in a photo of a certain equipment control panel (that would be a VP) we can have multiple TAGs: the hour-meter, the tachometer etc." %}
+        {% trans "In an image of compliance items, we can check if an area is tidy as it should be (10 if perfect, 8 if OK, for example), or if all safety equipment are in the right place etc." %}
+        {% trans "For each and every TAG you will define a tag question, that will be answered by you or your team when processing the VPs images." %}
+    </p>
 {% endblock %}
