--- a/mymwebsite/templates/innerbase.html
+++ b/mymwebsite/templates/innerbase.html
@@ -69,7 +69,7 @@
                     <li class="nav-item"><a class="nav-link" href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/login/">Login</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"><strong
-                            style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">Register</strong></a>
+                            style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">{% trans "Register" %}</strong></a>
                     </li>
                 </ul>
             </div>
@@ -106,7 +106,7 @@
                     </div>
                     <div class="col-md-3 mb-5">
                         <ul class="list-unstyled list-spaced">
-                            <li class="mb-2"><h6 class="text-uppercase">Legal</h6></li>
+                            <li class="mb-2"><h6 class="text-uppercase">{% trans "Legal" %}</h6></li>
                             <li><a class="text-muted"
                                    href="https://mymensor.com/{{ LANGUAGE_CODE }}/terms/">{% trans "Terms of Service" %}</a>
                             </li>
